--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.1",
     "antd": "^4.22.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "vue": "^3.2.37",
     "vue-picture-input": "^2.4.0",
-    "vue-upload-drop-images": "^1.0.7",
     "vue3-datepicker": "^0.3.4"
   },
   "devDependencies": {
