--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "vue": "^3.2.37",
-    "vue-picture-input": "^2.4.0",
-    "vue3-datepicker": "^0.3.4"
+    "vue-datepicker-local": "^1.0.19",
+    "vue-datepicker-ui": "^3.1.1",
+    "vue-picture-input": "^2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
