--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.2.37",
     "vue-datepicker-local": "^1.0.19",
     "vue-datepicker-ui": "^3.1.1",
-    "vue-picture-input": "^2.4.0"
+    "vue-picture-input": "^2.4.0",
+    "vue-upload-drop-images": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
