--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-datepicker-local": "^1.0.19",
     "vue-datepicker-ui": "^3.1.1",
     "vue-picture-input": "^2.4.0",
+    "vue-router": "^4.1.3",
     "vue-upload-drop-images": "^1.0.7"
   },
   "devDependencies": {
