--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "mitt": "^3.0.0",
     "vue": "^3.2.37",
     "vue-datepicker-local": "^1.0.19",
     "vue-datepicker-ui": "^3.1.1",
