--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-datepicker-ui": "^3.1.1",
     "vue-picture-input": "^2.4.0",
     "vue-router": "^4.1.3",
+    "vue-sweetalert2": "^5.0.5",
     "vue-upload-drop-images": "^1.0.7"
   },
   "devDependencies": {
@@ -26,4 +27,5 @@
     "sass": "^1.54.3",
     "vite": "^3.0.0"
   }
+  
 }
